# MIDAS

./: .gitignore  Dockerfile  MIDAS_docker_launcher.sh  README.md  a.yml  api_call_python_example.py  docker-compose.dev.yml  docker-compose.prod.yml  log.txt  requirements.txt  sources.csv  sources.py  stations_coordinates.csv  zip-folder.sh
.github/workflows/: docker-publish.yml  main.yml
Climacity/: climacity.py
HEPIA/: hepia.py
IDAWEB/: idaweb-o.py  idaweb.py
MIDAS/: manage.py
MIDAS/MIDAS/: asgi.py  settings.py  urls.py  wsgi.py
MIDAS/MIDAS/settings/: base.py  prod.py
MIDAS/MIDAS_api/: apps.py  serializers.py  urls.py  views.py
MIDAS/MIDAS_api/static/: openapi-schema.yml
MIDAS/MIDAS_api/templates/: apidoc.html
MIDAS/MIDAS_app/: admin.py  forms.py  models.py  update_db.py  urls.py  views.py
MIDAS/MIDAS_app/migrations/: 0001_initial.py  0002_alter_source_infos.py  0003_alter_parameter_infos_alter_station_infos.py  (+1 more)
MIDAS_app/: apps.py  urls.py
SABRA/: .gitignore  cypress.json  package-lock.json  package.json  sabra.py  scrap.py
SmartCity/: smart_city.py
TDS/: tds.py
VHG/: vhg.py
docker/: crontab  jobrunner.sh
logs/: logs_handler.py
packaging_merge/: setup.cfg
packaging_merge_csv_by_date/: README.md  setup.cfg
packaging_merge_csv_by_date/src/merge_csv_by_date_package/: merge_csv_by_date.py
packaging_merge_csv_by_date/src/merge_csv_by_date_package_MagiPrince.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shibboleth/: 000-default.conf  Dockerfile  attribute-policy.xml  shibboleth2.xml
static/: index.html
(+55 files in other folders)
