[metadata]
name = merge-csv-by-date-package-MagiPrince
version = 0.1.0
author = David Nogueiras Blanco
description = A small merge package, that merges two csv files of same by date
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src